# rd

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  rd.db
.github/: copilot-instructions.md
.github/workflows/: lint.yml
src/rd/: __init__.py  block_format.py  cli.py  database.py  magic_number.py  main.py  models.py
src/rd/BlockCache/: __init__.py  errors.py  models.py  ports.py  useCases.py
src/rd/adaptors/: __init__.py  dbmBlockCache.py  fsBlockCache.py  sqliteBlockCache.py
tests/: test_api.py  test_approvals.py  test_approvals.testApiEndToEndApproval.approved.txt  test_approvals.testCliHelpApproval.approved.txt  test_block_format.py  test_cli_database.py  test_magic_number.py
tests/BlockCache/: test_models.py  test_useCases.py
tests/adaptors/: test_dbmBlockCache.py  test_fsBlockCache.py  test_sqliteBlockCache.py
