[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rd"
version = "0.1.0"
description = "ReliableData — a SQLite3-backed key/value store with a REST interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "fastapi>=0.110.0",
    "rich>=13.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
rd-server = "rd.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rd"]

[tool.uv]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
